--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="section1">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                     <input id="pac-input" class="controls" type="text" placeholder="Search">
                 </div>
             </div>
@@ -40,11 +40,11 @@
         <br/>
 
         <!--Card-->
-        <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="card col-lg-6 col-md-12 col-sm-12 col-xs-12">
 
             <!--Card image-->
-            <div class="view overlay hm-white-slight">
-                <iframe width="670" height="430" src="https://www.youtube.com/embed/QzQnFY6CioA?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
+            <div class="view overlay hm-white-slight videoWrapper">
+                <iframe src="https://www.youtube.com/embed/QzQnFY6CioA?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
                     allowfullscreen>
                 </iframe>
             </div>
@@ -64,11 +64,11 @@
         <!--/.Card-->
 
 
-        <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="card col-lg-6 col-md-12 col-sm-12 col-xs-12">
 
             <!--Card image-->
-            <div class="view overlay hm-white-slight">
-                <iframe width="670" height="430" src="https://www.youtube.com/embed/g0cPY1CVJx4?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
+            <div class="view overlay hm-white-slight videoWrapper">
+                <iframe src="https://www.youtube.com/embed/g0cPY1CVJx4?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
                     allowfullscreen>
                 </iframe>
             </div>
@@ -97,14 +97,14 @@
 
         </div>
 
-        <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="card col-lg-6 col-md-12 col-sm-12 col-xs-12">
 
             <!--Card image-->
-            <div class="view overlay hm-white-slight">
+            <div class="view overlay hm-white-slight videoWrapper">
                 <!--<iframe width="670" height="430" src="https://youtu.be/Ix2iysV_RIs?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
                     allowfullscreen>
                 </iframe>-->
-                <iframe width="670" height="430" src="https://www.youtube.com/embed/iUbM6zqCN8U?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/iUbM6zqCN8U?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
                     allowfullscreen>
                 </iframe>
             </div>
@@ -123,11 +123,11 @@
 
         </div>
 
-        <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="card col-lg-6 col-md-12 col-sm-12 col-xs-12">
 
             <!--Card image-->
-            <div class="view overlay hm-white-slight">
-                <iframe width="670" height="430" src="https://www.youtube.com/embed/0Kf0MiVTqh0?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
+            <div class="view overlay hm-white-slight videoWrapper">
+                <iframe src="https://www.youtube.com/embed/0Kf0MiVTqh0?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
                     allowfullscreen>
                 </iframe>
             </div>
@@ -156,14 +156,14 @@
 
         </div>
 
-        <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="card col-lg-6 col-md-12 col-sm-12 col-xs-12">
 
             <!--Card image-->
-            <div class="view overlay hm-white-slight">
+            <div class="view overlay hm-white-slight videoWrapper">
                 <!--<iframe width="670" height="430" src="https://youtu.be/Ix2iysV_RIs?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
                     allowfullscreen>
                 </iframe>-->
-                <iframe width="670" height="430" src="https://www.youtube.com/embed/Fw6M8TWGzZQ?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/Fw6M8TWGzZQ?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
                     allowfullscreen>
                 </iframe>
             </div>
@@ -182,11 +182,11 @@
 
         </div>
 
-        <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="card col-lg-6 col-md-12 col-sm-12 col-xs-12">
 
             <!--Card image-->
-            <div class="view overlay hm-white-slight">
-                <iframe width="670" height="430" src="https://www.youtube.com/embed/8sxkGVTvAU8?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
+            <div class="view overlay hm-white-slight videoWrapper">
+                <iframe src="https://www.youtube.com/embed/8sxkGVTvAU8?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
                     allowfullscreen>
                 </iframe>
             </div>
