--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
 </head>
 
 <body class="container-fluid">
-    <section id="section1">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                    <input id="pac-input" class="controls" type="text" placeholder="Search">
-                </div>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">LiveIndia24x7</a>
             </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Telugu News</a></li>
+            </ul>
         </div>
+    </nav>
+    <section id="section1">
         <br/>
 
         <!--Card-->
@@ -44,8 +47,7 @@
 
             <!--Card image-->
             <div class="view overlay hm-white-slight videoWrapper">
-                <iframe src="https://www.youtube.com/embed/QzQnFY6CioA?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
-                    allowfullscreen>
+                <iframe src="https://www.youtube.com/embed/QzQnFY6CioA?rel=0&amp;showinfo=0?ecver=1" frameborder="0" allowfullscreen>
                 </iframe>
             </div>
             <!--/.Card image-->
@@ -56,7 +58,7 @@
                 <h4 class="card-title">ABN Live (Telugu)</h4>
                 <hr>
                 <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
             </div>
             <!--/.Card content-->
 
@@ -68,8 +70,7 @@
 
             <!--Card image-->
             <div class="view overlay hm-white-slight videoWrapper">
-                <iframe src="https://www.youtube.com/embed/g0cPY1CVJx4?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
-                    allowfullscreen>
+                <iframe src="https://www.youtube.com/embed/g0cPY1CVJx4?rel=0&amp;showinfo=0?ecver=1" frameborder="0" allowfullscreen>
                 </iframe>
             </div>
             <!--/.Card image-->
@@ -80,7 +81,7 @@
                 <h4 class="card-title">NTV Live (Telugu)</h4>
                 <hr>
                 <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
             </div>
             <!--/.Card content-->
 
@@ -104,8 +105,7 @@
                 <!--<iframe width="670" height="430" src="https://youtu.be/Ix2iysV_RIs?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
                     allowfullscreen>
                 </iframe>-->
-                <iframe src="https://www.youtube.com/embed/iUbM6zqCN8U?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
-                    allowfullscreen>
+                <iframe src="https://www.youtube.com/embed/iUbM6zqCN8U?rel=0&amp;showinfo=0?ecver=1" frameborder="0" allowfullscreen>
                 </iframe>
             </div>
             <!--/.Card image-->
@@ -116,7 +116,7 @@
                 <h4 class="card-title">Sakshi TV Live (Telugu)</h4>
                 <hr>
                 <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
             </div>
             <!--/.Card content-->
 
@@ -127,8 +127,7 @@
 
             <!--Card image-->
             <div class="view overlay hm-white-slight videoWrapper">
-                <iframe src="https://www.youtube.com/embed/0Kf0MiVTqh0?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
-                    allowfullscreen>
+                <iframe src="https://www.youtube.com/embed/0Kf0MiVTqh0?rel=0&amp;showinfo=0?ecver=1" frameborder="0" allowfullscreen>
                 </iframe>
             </div>
             <!--/.Card image-->
@@ -139,7 +138,7 @@
                 <h4 class="card-title">TV5 News Live (Telugu)</h4>
                 <hr>
                 <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
             </div>
             <!--/.Card content-->
 
@@ -163,8 +162,7 @@
                 <!--<iframe width="670" height="430" src="https://youtu.be/Ix2iysV_RIs?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
                     allowfullscreen>
                 </iframe>-->
-                <iframe src="https://www.youtube.com/embed/Fw6M8TWGzZQ?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
-                    allowfullscreen>
+                <iframe src="https://www.youtube.com/embed/Fw6M8TWGzZQ?rel=0&amp;showinfo=0?ecver=1" frameborder="0" allowfullscreen>
                 </iframe>
             </div>
             <!--/.Card image-->
@@ -175,7 +173,7 @@
                 <h4 class="card-title">T News Live (Telugu)</h4>
                 <hr>
                 <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
             </div>
             <!--/.Card content-->
 
@@ -186,8 +184,7 @@
 
             <!--Card image-->
             <div class="view overlay hm-white-slight videoWrapper">
-                <iframe src="https://www.youtube.com/embed/8sxkGVTvAU8?rel=0&amp;showinfo=0?ecver=1" frameborder="0"
-                    allowfullscreen>
+                <iframe src="https://www.youtube.com/embed/8sxkGVTvAU8?rel=0&amp;showinfo=0?ecver=1" frameborder="0" allowfullscreen>
                 </iframe>
             </div>
             <!--/.Card image-->
@@ -198,7 +195,7 @@
                 <h4 class="card-title">HMTVLive (Telugu)</h4>
                 <hr>
                 <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
             </div>
             <!--/.Card content-->
 
